syntax = "proto3";

package article.v1;

import "google/protobuf/empty.proto";

service ArithmeticService {
  rpc DeleteArticle(DeleteArticleRequest) returns (google.protobuf.Empty);
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse);
  rpc GetArticles(google.protobuf.Empty) returns (GetArticlesResponse);
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse);
  rpc UpdateArticle(UpdateArticleRequest) returns (google.protobuf.Empty);
}

message Article {
  string id = 1;
  string title = 2;
  string price = 3;
}

message ArticleID {
  string id = 1;
}

message DeleteArticleRequest {
  string id = 1;
}

message GetArticleRequest {
  string article_id = 1;
}

message GetArticleResponse {
  Article article = 1;
}

message GetArticlesResponse {
  repeated Article articles = 1;
}

message CreateArticleRequest {
  string title = 1;
  string price = 2;
}

message CreateArticleResponse {
  string id = 1;
}

message UpdateArticleRequest {
  Article article = 1;
}
